Examples and fixes for the tests